changes made to index.html and index.css

--- a/index.html
+++ b/index.html
@@ -35,19 +35,19 @@
 					<input type="button" value="Listar produtos" class="botao" id="listarBotao">
 				</div>
 				
-				<p id="mensagem-erro"></p>
+				<p id="mensagem-erro">Mensagem de erro</p>
 			</section>
 
 			<aside class="lista-produtos">
 				<h2>Produtos</h2>
 				<table class="tabela-produtos">
-					<th class="linha-tabela">
+					<tr class="linha-tabela table-heading">
 						<td class="id-produto">ID</td>
 						<td class="nome-produto">Produto</td>
 						<td class="valor-produto">Valor</td>
 						<td class="editar-produto">Editar</td>
 						<td class="apagar-produto">Apagar</td>
-					</th>
+					</tr>
 					<tr class="linha-tabela">
 						<td class="id-produto">1</td>
 						<td class="nome-produto">Produto A</td>
