upd: v2.0 Modelo básico funcional pronto

--- a/index.html
+++ b/index.html
@@ -94,6 +94,10 @@
 						</td>
 					</tr>
 				</table>
+
+				<div class="container-produto-clicado">
+					<p id="produto-clicado"></p>
+				</div>
 			</aside>
 		</main>
 
