upd: v2.1 Botoes visiveis e invisiveis

--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
 					<input
 						type="button"
 						value="Atualizar produto"
-						class="botao"
+						class="botao display-none"
 						id="atualizarBotao"
 					/>
 					<input
 						type="button"
 						value="Cancelar atualização"
-						class="botao"
+						class="botao display-none"
 						id="cancelarBotao"
 					/>
 					<input
@@ -75,7 +75,8 @@
 			<aside class="lista-produtos">
 				<h2>Produtos</h2>
 				<table class="tabela-produtos">
-					<tr class="linha-tabela table-heading">
+					<!--
+						<tr class="linha-tabela table-heading">
 						<td class="id-produto">ID</td>
 						<td class="nome-produto">Produto</td>
 						<td class="valor-produto">Valor</td>
@@ -93,6 +94,7 @@
 							<img src="./assets/delete.png" alt="Ícone de apagar produto" />
 						</td>
 					</tr>
+					-->
 				</table>
 
 				<div class="container-produto-clicado">
